initial try with fairness preprocessing

--- a/AIF360.ipynb
+++ b/AIF360.ipynb
@@ -677,45 +677,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fairness Metric on the Dataset"
+    "# Fairness Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from aif360.metrics import DatasetMetric\n",
-    "#privileged_groups = [{'geography': 0}]\n",
-    "#unprivileged_groups = [{'geography': 1}, {'geography': 2}, {'geography': 3}, {'geography': 4}, {'geography': 5}]\n",
-    "#metric = DatasetMetric(ai360df, privileged_groups, unprivileged_groups)\n",
-    "#metric.num_instances(), metric.num_instances(privileged=True), metric.num_instances(privileged=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.topic_shown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "from aif360.datasets import BinaryLabelDataset\n",
-    "\n",
-    "ai360df = BinaryLabelDataset(df=train.replace(\n",
+    "ai360df = BinaryLabelDataset(df=train.drop(['id'], axis=1).replace(\n",
     "    {'Opinion': 0, 'Other': 1}\n",
     ").replace(\n",
     "    {v: k for k, v in geographies.items()}\n",
     ").astype(int), label_names=['topic_shown'], protected_attribute_names=['geography'],\n",
     "    unprivileged_protected_attributes=['Region B', 'Region C', 'Region D', 'Region E'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No improvement (original 0.6751)..\n",
+      "0.6717922825797389\n"
+     ]
+    }
+   ],
+   "source": [
+    "from aif360.algorithms.preprocessing import DisparateImpactRemover\n",
+    "di = DisparateImpactRemover(repair_level=1)\n",
+    "di = di.fit_transform(ai360df)\n",
+    "di = pd.DataFrame(np.hstack([di.features, di.labels]))\n",
+    "di.columns = train.drop(['id'], axis=1).columns\n",
+    "priv = di.geography == 0\n",
+    "print(\"No improvement (original 0.6751)..\")\n",
+    "print((di[~priv].topic_shown == 0).mean() / (di[priv].topic_shown == 0).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No improvement (original 0.6751)..\n",
+      "0.6717922825797389\n"
+     ]
+    }
+   ],
+   "source": [
+    "from aif360.algorithms.preprocessing import Reweighing\n",
+    "unprivileged_groups, privileged_groups = [{'geography': 1}, {'geography': 2}, {'geography': 3}, {'geography': 4}, {'geography': 5}], [{'geography': 0}]\n",
+    "rw = Reweighing(unprivileged_groups, privileged_groups)\n",
+    "rw = rw.fit_transform(ai360df)\n",
+    "rw = pd.DataFrame(np.hstack([rw.features, rw.labels]))\n",
+    "rw.columns = train.drop(['id'], axis=1).columns\n",
+    "priv = rw.geography == 0\n",
+    "print(\"No improvement (original 0.6751)..\")\n",
+    "print((rw[~priv].topic_shown == 0).mean() / (rw[priv].topic_shown == 0).mean())"
    ]
   },
   {
